[package]
name = "gold_house"
version = "0.1.0"
authors = ["Tim <hello@timbest.net>"]

[dependencies]
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rustc-serialize = "*"
zillow = { path = "zillow" }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
